syntax = "proto3";

package bchm.v1;

import "bchm/v1/category.proto";
import "bchm/v1/lost.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/airdb/xadmin-api/genproto/bchm/v1;bchmv1";
option java_multiple_files = true;
option java_outer_classname = "BchmProto";
option java_package = "com.github.airdb.xadmin-api.bchm.v1";

// 宝贝回家 业务
//
// @Kit
//  gencode:
//    layers: ["*"]
service Service {
  // ListCategories 走失分类 列表.
  //
  // @Kit
  //  resources:
  //    - {domain: bchm, object: lost, entity: *, action: list}
  rpc ListCategories(ListCategoriesRequest) returns (ListCategoriesResponse) {
    option (google.api.http) = {
      get: "/v1/bchm/categories"
    };
  }

  // ListLosts 走失信息 列表.
  //
  // @Kit
  //  resources:
  //    - {domain: bchm, object: lost, entity: *, action: list}
  rpc ListLosts(ListLostsRequest) returns (ListLostsResponse) {
    option (google.api.http) = {
      get: "/v1/bchm/losts"
    };
  }

  // GetLost 走失信息 详情.
  //
  // @Kit
  //  resources:
  //    - {domain: bchm, object: lost, entity: id, action: detail}
  rpc GetLost(GetLostRequest) returns (GetLostResponse) {
    option (google.api.http) = {
      get: "/v1/bchm/lost/{id}"
    };
  }

  // GetLost 走失信息 分享回调.
  //
  // @Kit
  //  resources:
  //    - {domain: bchm, object: lost, entity: id, action: detail}
  rpc ShareLostCallback(ShareLostCallbackRequest) returns (ShareLostCallbackResponse) {
    option (google.api.http) = {
      get: "/v1/bchm/lost/{id}/share/{share_key}/callback"
    };
  }

  // GetLost 走失信息 小程序码.
  //
  // @Kit
  //  resources:
  //    - {domain: bchm, object: lost, entity: id, action: detail}
  rpc GetLostMpCode(GetLostMpCodeRequest) returns (GetLostMpCodeResponse) {
    option (google.api.http) = {
      get: "/v1/bchm/lost/{id}/wxmp_code.jpg"
      response_body: "code"
    };
  }

  // CreateLost 走失信息 创建.
  //
  // @Kit
  //  resources:
  //    - {domain: bchm, object: lost, entity: *, action: create}
  rpc CreateLost(CreateLostRequest) returns (CreateLostResponse) {
    option (google.api.http) = {
      post: "/v1/bchm/lost"
      body: "*"
    };
  }

  // UpdateLost 走失信息 更新.
  //
  // @Kit
  //  resources:
  //    - {domain: bchm, object: lost, entity: lost.id, action: update}
  rpc UpdateLost(UpdateLostRequest) returns (UpdateLostResponse) {
    option (google.api.http) = {
      put: "/v1/bchm/lost/{lost.id}"
      body: "*"
    };
  }

  // DeleteLost 走失信息 删除.
  //
  // @Kit
  //  resources:
  //    - {domain: bchm, object: lost, entity: id, action: delete}
  rpc DeleteLost(DeleteLostRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/bchm/lost/{id}"
    };
  }
}

// Lost Start

message ListLostsRequest {
  int32 page_offset = 1;
  int32 page_size = 2;
  string keyword = 3;
  string category = 4;
}

message ListLostsResponse {
  int32 total_size = 1;
  int32 filtered_size = 2;

  repeated Lost losts = 3;
}

message GetLostRequest {
  int32 id = 1;
}

message GetLostResponse {
  Lost lost = 1;
}

message ShareLostCallbackRequest {
  int32 id = 1;
  string share_key = 2;
}

message ShareLostCallbackResponse {
  Lost lost = 1;
}

message GetLostMpCodeRequest {
  int32 id = 1;
}

message GetLostMpCodeResponse {
  bytes code = 1;
}

message CreateLostRequest {
  // 基础信息

  // Name
  string name = 2; // 姓名
  uint32 gender = 3; // 性别: 1男 2女 0未知
  google.protobuf.Timestamp birthed_at = 4; // 出生日期
  repeated string carousel = 5; // 寻亲目标轮播图

  // 失踪信息
  google.protobuf.Timestamp missed_at = 6; // 失踪时间
  string missed_country = 7; // 失踪国家
  string missed_province = 8; // 失踪省
  string missed_city = 9; // 失踪市
  string missed_addr = 10; // 详细地址
  string missed_height = 11; // 失踪时身高
  string character = 12; // 特征
  string details = 13; // 失踪详情

  // 寻亲信息
  string category = 14; // 寻亲类型
  string data_from = 15; // 信息来源
  string follower = 16; // 跟进志愿者
}

message CreateLostResponse {
  Lost lost = 1;
}

message UpdateLostRequest {
  Lost lost = 1;
  google.protobuf.FieldMask update_mask = 2;
}

message UpdateLostResponse {
  Lost lost = 1;
}

message DeleteLostRequest {
  int32 id = 1;
}

// Lost End
